--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
                 </div>
 
                 <div class="thumbs">
-                    <div class="prev"></div>
-                    <div class="next"></div>
+
+                    <div class="prev" @click="changeImage('prev')"></div>
+                    <div class="next" @click="changeImage('next')"></div>
+
                     <div class="thumb active">
                         <img src="img/01.webp" alt="Svezia" />
                     </div>
