--- a/index.html
+++ b/index.html
@@ -19,13 +19,8 @@
                 <div class="item">
                     <img :src="carouselItems[currentIitem].image" alt="Spiderman" />
                     <div class="text">
-                        <h3>Spiderman</h3>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
-                            tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
-                            corporis.
-                        </p>
+                        <h3>{{carouselItems[currentIitem].title}}</h3>
+                        <p> {{carouselItems[currentIitem].text}} </p>
                     </div>
                 </div>
 
@@ -49,6 +44,7 @@
                     <div class="thumb">
                         <img src="img/05.webp" alt="Avengers" />
                     </div>
+                    
                 </div>
 
             </div>
