--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div id="app">
 
         <div class="container">
-            <div class="slider-wrapper" tabindex="0">
+            <div class="slider-wrapper" tabindex="0" @mouseover="stopAutoplay()" @mouseleave="startAutoplay()">
+
 
                 <div class="item">
                     <img :src="carouselItems[currentIitem].image" :alt="carouselItems[currentIitem].alt" />
