--- a/index.html
+++ b/index.html
@@ -14,26 +14,31 @@
     <div id="app">
 
         <div class="container">
-            <div class="slider-wrapper" tabindex="0" @mouseover="stopAutoplay()" @mouseleave="startAutoplay()">
+            <div class="slider-wrapper" tabindex="0">
 
 
-                <div class="item">
-                    <img :src="carouselItems[currentIitem].image" :alt="carouselItems[currentIitem].alt" />
+                <div class="item" @mouseover="stopAutoplay()" @mouseleave="startAutoplay()">
+                    
+                    <img :src="carouselItems[currentIitem].image" :alt="carouselItems[currentIitem].alt"
+                        :id="'item-' + currentIitem" />
                     <div class="text">
                         <h3>{{carouselItems[currentIitem].title}}</h3>
                         <p> {{carouselItems[currentIitem].text}} </p>
                     </div>
-                </div>
-
-                <div class="thumbs">
 
                     <div class="prev" @click="changeImage('prev')"></div>
                     <div class="next" @click="changeImage('next')"></div>
 
+                </div>
+
+
+                <div class="thumbs">
+
+
                     <div v-for="(item, index) in carouselItems" class="thumb"
                         :class="currentIitem === index ? 'active' : '' " @click="changeImage('thumb', index)">
 
-                        <img :src="carouselItems[index].image" :alt="carouselItems[index].alt" />
+                        <img :src="carouselItems[index].image" :alt="carouselItems[index].alt" :id="'thumb-' + index" />
 
                     </div>
 
